paper discontinued and recontinued feature completed
