# server/API/Controllers/PaperController.cs
@@ -1,5 +1,6 @@
 ﻿using DataAccess.Models;
 using DataAccess.TransferModels.Request;
+using Microsoft.AspNetCore.Http.HttpResults;
 using Microsoft.AspNetCore.Mvc;
 using Service;
 using Service.Interfaces;
@@ -24,6 +25,14 @@ public class PaperController(IPaperService paperService) : ControllerBase
     public ActionResult<PaperDto> GetPaper([FromRoute] int id)
     {
         var paper = paperService.GetPaperById(id);
+        return Ok(paper);
+    }
+
+    [HttpPut]
+    [Route("Update/{id}/Discontinued")]
+    public ActionResult<PaperDto> UpdateDiscontinued([FromBody] bool discontinued, [FromRoute] int id)
+    {
+        var paper = paperService.UpdateDiscontinuedPaperDto(id, discontinued);
         return Ok(paper);
     }
 }
