# server/Service/Interfaces/IPaperService.cs
@@ -1,4 +1,5 @@
-﻿using DataAccess.TransferModels.Request;
+﻿using DataAccess.Models;
+using DataAccess.TransferModels.Request;
 using Service.TransferModels.Responses;
 
 namespace Service.Interfaces;
@@ -10,4 +11,6 @@ public interface IPaperService
     public List<PaperDto> GetAllProducts();
     
     public PaperDto GetPaperById(int paperId);
+
+    public PaperDto UpdateDiscontinuedPaperDto(int id, bool discontinued);
 }
